sumo/tests/traci/VariableSubscription/errors/UnknownVariable/testclient.prog
simstep2 200
subscribevariable 212 0 0 1000 1 255
simstep2 0

